# ESPproject

./: CLAUDE.md  CMakeLists.txt  partitions.csv
.claude/: settings.local.json
.devcontainer/: devcontainer.json
components/: CMakeLists.txt
components/INMP441/: app_sr.c  app_sr.h  inmp441.c  inmp441.h
components/LCD/: lcd.c  lcd.h  mylvgl.c  mylvgl.h
components/MQTT/: app_mqtt.c  app_mqtt.h
components/OTA/: app_ota.c  app_ota.h
components/RADAR/: radar.c  radar.h
components/SG90/: sg90.c  sg90.h
components/WIFI/: wificsi.c  wificsi.h  wifista.c  wifista.h
data/: baseline.json  status.csv
main/: Kconfig.projbuild  idf_component.yml  main.c
tools/: csi_plot_tool.py  csi_status_reader.py  raw_csi_reader.py
